cmake_minimum_required(VERSION 3.25)
project(clion_ft_bakery_poo)

set(CMAKE_CXX_STANDARD 17)

add_executable(clion_ft_bakery_poo a02ex00.cpp a02ex01_a.cpp a02ex03_a.cpp a02ex03_b.cpp a02ex03_c.cpp a02ex03_d.cpp a02ex03_e.cpp Cheese.cpp Cheese.hpp CottageCheese.hpp CottageCheese.cpp Ham.hpp Ham.cpp Mortadella.hpp Mortadella.cpp MyProgram.cpp MyProgram.hpp FT_bakery.cpp FT_bakery.hpp Liquid.cpp Milk.hpp Milk.cpp Water.hpp Water.cpp Soda.hpp Soda.cpp Beer.hpp Beer.cpp PilsenBeer.cpp PilsenBeer.hpp LagerBeer.hpp BockBeer.hpp PaleAleBeer.hpp BockBeer.cpp PaleAleBeer.cpp LagerBeer.cpp)
